Uploaded image for project: 'Log4cxx'
  1. Log4cxx
  2. LOGCXX-298

SMTPappender does not build properly using autotools

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.10.0, 0.11.0
    • 0.11.0
    • Appender
    • None
    • Debian Linux (Lenny) using autotools on x86

    Description

      Building with

      ./configure --with-SMTP=libesmtp
      make

      produces a library that still does not have SMTP support. Grep for "built without SMTP" and the library has it when it shouldn't.

      The Makefile has:
      DEFS = ...... -DHAVE_LIBESMTP=1
      HAS_LIBESMTP=1
      LIBS = -lesmtp -lesmtp

      However, smtpappender.cpp is looking for LOG4CXX_HAVE_LIBESMTP and LOG4CXX_HAS_LIBESMTP. Changing all of these to HAVE_LIBESMTP allows proper compilation, but I am not sure what the intended naming was. HAS_LIBESMTP is only defined in the Makefile and not sent to the compiler.

      Attachments

        Activity

          People

            carnold@apache.org Curt Arnold
            sunergos Matthew Vernon
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 4h
                4h
                Remaining:
                Remaining Estimate - 4h
                4h
                Logged:
                Time Spent - Not Specified
                Not Specified