LOGCXX-298: SMTPAppender does not build properly with autotools